[package]
name = "neutron-star"
version = "0.1.0"
authors = ["Jordan Earls <earlz@earlz.net>"]
edition = "2018"
harness = false



[dependencies]
neutron-star-rt = { git = "https://github.com/qtumproject/neutron-star-rt" }
#neutron-star-rt = { path = "../qtum-neutron-rt" }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.linked_list_allocator]
version = "0.8"

[dependencies.neutron-star-constants]
#path = "../../neutronstar-constants"
git = "https://github.com/qtumproject/neutron-star-constants"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true
codegen-units = 1

[profile.test]
panic = "abort"

[profile.bench]
panic = "abort"

[features]
default = [ "nightly" ]
nightly = []
