[package]
name = "neutron-star"
version = "0.1.0"
authors = ["Jordan Earls <earlz@earlz.net>"]
edition = "2018"
harness = false



[dependencies]
neutron-star-rt = { path = "../neutron-star-rt" }
panic-halt = "0.2.0"
neutron-star-constants = { path = "../neutron-star-constants" }

[dependencies.num-traits]
version = "0.2"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true
codegen-units = 1
